# Codex_Intento1

./: .editorconfig  .env.sample  .gitattributes  .gitignore  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  conftest.py  cspell.json  docker-compose.yml  pyproject.toml  requirements-dev.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  docs.yml  nightly-eval.yml  release.yml  sbom-scan.yml
apps/feriactl/: pyproject.toml
apps/feriactl/src/feriactl/: __init__.py  main.py
apps/feriactl/src/feriactl/commands/: base.py  debug.py  health.py  ingest.py  queues.py  scale.py  snapshot.py  status.py
apps/feriactl/src/feriactl/utils/: api.py  tabulate.py
apps/feriactl/tests/: test_api_client.py  test_debug_command.py  test_health_command.py  test_main.py  test_status_command.py  test_tabulate.py
configs/: models.toml  settings.toml
configs/policies/: features.flags.yaml  routing.policy.toml  sandbox.policy.yaml  tenants.quotas.yaml
docs/: Lienzo_maestro.md  security-public-key.asc
docs/api/: openapi.yaml
docs/reports/: debug_progress.md  debug_sessions.jsonl  debug_sessions.md
docs/runbooks/: drift.md  gpu-oom.md  latency-p95.md  restore-dr.md
infra/docker/: base.Dockerfile  gpu.Dockerfile  python.Dockerfile
scripts/: bench_rag.py  debug_suite.py  dev_debug.py  eval_nightly.py  simulate_load.py  snapshot_create.py  snapshot_restore.py
scripts/tests/: test_debug_suite.py  test_dev_debug.py  test_simulate_load.py
services/api-gateway/: Dockerfile  pyproject.toml
services/cpu-worker/: pyproject.toml
services/debug-agent/: Dockerfile  pyproject.toml
services/eval-service/: Dockerfile  pyproject.toml
services/event-bus/: Dockerfile  pyproject.toml
services/gpu-worker/: Dockerfile  pyproject.toml
services/ingestor/: pyproject.toml
(+83 files in other folders)
