[project]
name = "precision-codex"
version = "0.1.0"
description = "FERIA Precision Codex monorepo workspace"
readme = "README.md"
authors = [{ name = "FERIA Precision Codex", email = "team@feria.local" }]
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = []

[build-system]
requires = []
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = [
  "pytest>=8.3",
  "ruff>=0.5.7",
  "mypy>=1.10",
  "bandit>=1.7.8",
  "pre-commit>=3.6",
]

[tool.uv.workspace]
members = [
  "apps/feriactl",
  "packages/core",
  "packages/agent",
  "packages/policy",
  "packages/eval",
  "packages/observability",
  "packages/metrics-client",
  "packages/sdk",
  "services/api-gateway",
  "services/orchestrator",
  "services/model-gateway",
  "services/gpu-worker",
  "services/cpu-worker",
  "services/ingestor",
  "services/retrieval",
  "services/debug-agent",
  "services/sandbox-runner",
  "services/eval-service",
  "services/snapshotter",
  "services/observability",
  "services/event-bus",
]
